--- a/public/css/restaurantes/modal.css
+++ b/public/css/restaurantes/modal.css
@@ -30,8 +30,8 @@
     width: 70%;
 
     padding: 50px;
-    background-color: var(--background-light);
-
+    background-color: var(--form);
+    backdrop-filter: blur(6px);
     border-radius: 20px;
 }
 
@@ -44,7 +44,7 @@
 
 .close-btn {
     position: absolute;
-
+    color: var(--text-primary);
     right: 15px;
     top: 15px;
 }
